[package]
name    = "simple_proxy"
edition = "2021"
version = "1.3.4-fix1"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
description = "Simple proxy with middlewares, easy to customize, easy to use."
license = "Apache-2.0"
homepage = "https://github.com/terry90/rs-simple-proxy"
repository = "https://github.com/terry90/rs-simple-proxy"

[package.metadata.docs.rs]
features = ["docs"]

[features]
router = ["regex", "serde_regex"]
health = []
cors = []
docs   = ["router", "health", "cors"]

[dependencies]
futures        = "^0.3"
log            = "^0.4"
chrono         = { version = "^0.4", features = ["serde"] }
regex          = { version = "^1.8", optional = true }
serde_regex    = { version = "^1.1", optional = true }
serde_json     = "^1.0"
serde_derive   = "^1.0"
serde          = "^1.0"
rand           = { version = "^0.8", features = ["small_rng"] }
hyper          = { version = "^0.14", features = ["client", "tcp", "http1", "server"] }
http           = "^0.2"
